Update README.md to encompass client optimizer, dedicated server suite, workshop integration, and build docs